# rl_replanner_training

./: .gitignore  .gitmodules  setup.py  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  ros_entrypoint.sh
cpp_utils/: CMakeLists.txt
cpp_utils/binding/: CMakeLists.txt  main.cpp
cpp_utils/include/: costmap_2d.hpp  logger.h  utils.h
cpp_utils/include/map_loader/: costmap_2d.hpp  inflation_layer.hpp  map_io.hpp  static_layer.hpp
cpp_utils/include/map_voronoi/: mapvoronoi.h  voronoi.h  voronoigraph.h  voronoinode.h
cpp_utils/include/path_planner/: navfn.hpp  navfn_planner_with_cone.hpp  planner_setting.yaml
cpp_utils/include/teb_local_planner/: logger.h  misc.h  obstacles.h  optimal_planner.h  planner_interface.h  pose_se2.h  robot_footprint_model.h  teb_config.h  teb_params.yaml  timed_elastic_band.h  timed_elastic_band.hpp
cpp_utils/include/teb_local_planner/g2o_types/: edge_acceleration.h  edge_dynamic_obstacle.h  edge_kinematics.h  edge_obstacle.h  edge_prefer_rotdir.h  edge_shortest_path.h  edge_time_optimal.h  edge_velocity.h  edge_velocity_obstacle_ratio.h  edge_via_point.h
cpp_utils/include/teb_planner/: optimal_planner.h  planner_interface.h
cpp_utils/include/traj_generator/: traj_generator.h
cpp_utils/input_map_img/: turtlebot3_world.yaml
cpp_utils/src/: costmap_2d.cpp  inflation_layer.cpp  map_io.cpp  map_mode.cpp  static_layer.cpp
cpp_utils/src/map_loader/: costmap_2d.cpp  map_io.cpp
cpp_utils/src/map_voronoi/: mapvoronoi.cpp  my.cpp  mytest.cpp  voronoi.cpp  voronoigraph.cpp  voronoinode.cpp
cpp_utils/src/path_planner/: navfn.cpp  navfn_planner_with_cone.cpp
cpp_utils/src/teb_local_planner/: obstacles.cpp  optimal_planner.cpp  teb_config.cpp  test_optim_node.cpp  test_teb.cpp  timed_elastic_band.cpp
cpp_utils/src/traj_generator/: traj_generator.cpp
rl_replanner_train/: __init__.py  action_converter.py  base_env.py  eval_env.py  test.py  train_env.py
rl_replanner_train/cpp_utils/: CMakeLists.txt
rl_replanner_train/cpp_utils/src/: main.cpp
rl_replanner_train/data/: test_trajectory_1_add_0.1.txt
rl_replanner_train/data/eval_paths/: path_0.txt  path_1.txt  path_10.txt  path_100.txt  path_101.txt  path_102.txt  path_103.txt  path_104.txt  path_105.txt  path_106.txt  path_107.txt  path_108.txt  path_109.txt  path_11.txt  path_110.txt  path_111.txt  path_12.txt  path_13.txt  path_14.txt  path_15.txt  path_16.txt  path_17.txt  path_18.txt  path_19.txt  path_2.txt  path_20.txt  path_21.txt  path_22.txt  path_23.txt  path_24.txt  path_25.txt  path_26.txt  path_27.txt  path_28.txt  path_29.txt  path_3.txt  path_30.txt  path_31.txt  path_32.txt  path_33.txt  (+72 more)
rl_replanner_train/maps/: circle_map_generator.py  costmap_2d.py  square_map_generator.py
rl_replanner_train/maps/real_maps/: global_grid_map_floor1.pgm  global_grid_map_floor1.yaml  global_grid_map_floor2.pgm  global_grid_map_floor2.yaml  global_grid_map_floor3.pgm  global_grid_map_floor3.yaml  global_grid_map_floor5.pgm  global_grid_map_floor5.yaml
rl_replanner_train/maps/tb3_classic/: turtlebot3_world_3.pgm  turtlebot3_world_3.yaml  turtlebot3_world_4.pgm  turtlebot3_world_4.yaml  turtlebot3_world_5.pgm  turtlebot3_world_5.yaml
rl_replanner_train/render/: costmap_2d.py  default_view.rviz  rosRender.py
rl_replanner_train/tests/: generate_eval_paths.py  test.py  test_cpp_utils.py  test_env.py  test_eval_env.py  test_find_all_paths.py  test_teb_planner.py  test_traj_generator.py
